tests/ifcc-test-output/testfiles-part4_3-errorType/gcc-compile.txt
input.c:2:5: error: use of undeclared identifier 'INTEGER'
    INTEGER variable;
    ^
input.c:3:5: error: use of undeclared identifier 'variable'
    variable = 10;
    ^
input.c:4:12: error: use of undeclared identifier 'variable'
    return variable;
           ^
3 errors generated.

return code: 1
